--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "easyswoole/easyswoole": "3.x",
         "easyswoole/swoole-ide-helper": "^1.3",
-        "easyswoole/orm": "^1.4"
+        "easyswoole/orm": "^1.4",
+        "easyswoole/actor": "2.x"
     },
     "autoload": {
         "psr-4": {
